# fastapi-gsheets

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
backend/google_utils/: auth.py
config/: setup.py
google_utils/: sheets.py
gsheets/: Dockerfile  README.md  config.conf  config.ini  main.py  pyproject.toml
gsheets/conference_filters/: filters.py
gsheets/config/: setup.py
gsheets/google_utils/: auth.py  filters.py  models.py  sheets.py  sheets_ops.py  sheets_requests.py  utils.py
gsheets/sheets/: __init__.py  _users.py  conferences.py  filters.py  models.py  operations.py  requests.py  sheets_requests.py  srequests.py  utils.py
tgbot/: Dockerfile  config.conf  main.py  pyproject.toml
tgbot/config/: setup.py
tgbot/config2/: setup2.py
tgbot/db/: operations.py
tgbot/docx_builders/: docx_builders.py
tgbot/docx_utils/: builder.py
tgbot/gdrive/: operations.py
tgbot/sheets/: requests.py
tgbot/users_db/: __init__.py  ops.py
tgbot/utils/: conversations.py  docx_utils.py
