[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["modernpacifist <modernpacifist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["job-queue"], version = "^21.4"}
requests = "^2.32.3"
pytz = "^2024.1"
python-docx = "^1.1.2"
pydantic = {extras = ["email"], version = "^2.8.2"}
google-api-python-client = "^2.143.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
